# zero_r

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml
src/: lib.rs  logger.rs  main.rs
src/models/: market.rs
src/screeners/: bybit.rs  bybit_tests.rs  meteora.rs  mod.rs
src/store/: db.rs  init.sql  markets.rs  mod.rs
